--- a/lifeManager/app/src/main/AndroidManifest.xml
+++ b/lifeManager/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Analytics" />
+        <activity android:name=".schedule"></activity>
+        <activity android:name=".Schedule" />
     </application>
 
 </manifest>
