Updated Schedule page and added new event page based on Chan's ui model

--- a/lifeManager/app/src/main/AndroidManifest.xml
+++ b/lifeManager/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Analytics" />
-        <activity android:name=".schedule"></activity>
         <activity android:name=".Schedule" />
+        <activity android:name=".NewEvent"></activity>
     </application>
 
 </manifest>
