--- a/lifeManager/app/src/main/AndroidManifest.xml
+++ b/lifeManager/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="teamgg.cs262.calvin.edu.lifemanager">
+    package="lifemanager.edu.calvin.cs262.teamgg.lifemanager">
 
     <application
         android:allowBackup="true"
@@ -18,9 +18,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Analytics" />
-        <activity android:name=".Schedule" />
-        <activity android:name=".NewEvent"></activity>
     </application>
 
 </manifest>
